# python-template-2

./: .dockerignore  .env.template  .gitignore  .pylintrc  Dockerfile  alembic.ini  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  requirements.in  requirements.txt  tox.ini
.infra/: kube-prometheus-stack-values.yaml
.infra/helm/: Chart.yaml  values.yaml
.infra/helm/templates/00-postgres/: deployment.yaml  pvc.yaml  service.yaml
.infra/helm/templates/01-app/: deployment.yaml  ingress.yaml  service-monitor.yaml  service.yaml
migrations/: env.py
migrations/versions/: 20240426205215_init.py
src/: vars.py
src/di/: author.py  book.py  category.py  container.py  file_storage.py  m2m_author_book.py  m2m_category_book.py  sqlalchemy_asyncpg.py
src/domain/: exceptions.py
src/domain/dto/: author.py  book.py  category.py
src/domain/factory/: author.py  book.py  category.py
src/domain/interface/: author.py  book.py  category.py  m2m_author_book.py  m2m_category_book.py  storage.py
src/domain/services/: author.py  book.py  category.py  m2m.py  test.py
src/infra/dao/: file_path_storage.py
src/infra/dao/asyncpg_sqla/: author.py  book.py  category.py  db.py  m2m_author_book.py  m2m_category_book.py
src/infra/db/postgresql/: public.py
src/infra/repository/: author.py  book.py  category.py  m2m_author_book.py  m2m_category_book.py  storage.py
src/interface/rest/litestar/: app.py
src/interface/rest/litestar/middlewares/: apm.py  common.py  metrics.py
src/interface/rest/litestar/views/htmx/: authors.py  books.py  categories.py  router.py
src/interface/rest/litestar/views/htmx/templates/: base.html  index.html
src/interface/rest/litestar/views/htmx/templates/authors/: list.html
src/interface/rest/litestar/views/htmx/templates/books/: card.html  detail.html  edit_categories.html  edit_title.html  list.html
src/interface/rest/litestar/views/htmx/templates/categories/: card.html  list.html
src/interface/rest/litestar/views/rest/: common.py
src/settings/: __init__.py  app.py  log.py
tests/: conftest.py  pyproject.toml
tests/domain/book/: test_create.py  test_delete.py  test_get.py  test_update.py
tests/infra/postgres/: conftest.py  test_conftest.py
tests/infra/postgres/dao/: test_author_dao.py  test_book_dao.py  test_category_dao.py
